--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,33 @@
-.App {
-  text-align: center;
+.is-collapsed {
+  display: none !important;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media print {
+  .is-collapsed-for-print {
+    display: none !important;
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .columns {
+    margin-bottom: 0.2rem !important;
   }
-  to {
-    transform: rotate(360deg);
+
+  .columns .column {
+    margin-bottom: 0.2rem !important;
+  }
+
+  .hero-body {
+    padding: 0.5rem !important;
+  }
+
+  .card {
+    margin-bottom: 0.5rem !important;
+  }
+
+  .content {
+    margin-bottom: 0.2rem !important;
+  }
+
+  .card-content {
+    padding: 0.2rem !important;
   }
 }
