- removed unused files - used consistently sass everywhere - sorted imports , first 3rd party imports then app imports

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -9,12 +9,12 @@
 
   .columns {
     margin-bottom: 0.2rem !important;
-  }
 
-  .columns .column {
-    margin-bottom: 0.2rem !important;
+    .column {
+      margin-bottom: 0.2rem !important;
+    }
   }
-
+  
   .hero-body {
     padding: 0.5rem !important;
   }
